--- a/src/main/resources/assets/extend/lang/en_us.json
+++ b/src/main/resources/assets/extend/lang/en_us.json
@@ -1,7 +1,7 @@
 {
     "item.extend.extend_item": "The Supreme Eye",
     "item.extend.extend_key": "The Supreme Key",
-    "item.extend.extend_item": "The Unreal Sword",
+    "item.extend.extend_sword": "The Unreal Sword",
     
     "itemGroup.extend_group": "TRSM Extension"
 }
