--- a/src/main/resources/assets/extend/lang/zh_cn.json
+++ b/src/main/resources/assets/extend/lang/zh_cn.json
@@ -1,7 +1,7 @@
 {
     "item.extend.extend_item": "无上之眼",
     "item.extend.extend_key": "无上之钥",
-    "item.extend.extend_item": "子虚乌有剑",
+    "item.extend.extend_sword": "子虚乌有剑",
     
     "itemGroup.extend_group": "重铸扩展"
 }
